home-cluster/monitoring/ingressroute-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
